third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/signer/double_signer.exp
module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
    public entry fun <SELF>_0(_s: signer, _s2: signer) {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_1 {
    public entry fun <SELF>_1(_s: signer, _s2: signer, _u: u64) {
        ()
    }
}

module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_2 {
    public entry fun <SELF>_2(_s: signer, _u: u64, _s2: signer) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ double_signer.move:1:76
  │
1 │ module 0x8bd18359a7ebb84407b6defa7bc5da9aca34a3d1ce764ddfb4d0adcc663430b4::<SELF>_0 {
  │                                                                            ^
  │                                                                            │
  │                                                                            Unexpected '<'
  │                                                                            Expected an identifier
